# SEA-ME-warm-up

./: .gitignore  README.md
Module00/Exercise00/: BestCommit.md
Module00/Exercise01/: CMakeLists.txt  README.md
Module00/Exercise01/include/: ConvertToLower.h  ConvertToUpper.h
Module00/Exercise01/src/: ConvertToLower.cpp  ConvertToUpper.cpp  main.cpp
Module00/Exercise01/tests/: TestConvertToLower.cpp  TestConvertToUpper.cpp
Module00/Exercise02/: CMakeLists.txt
Module00/Exercise02/src/: main.cpp
